@@ -566,44 +566,44 @@ gdb_test "macro expand SPLICE(robot, invasion)" \
 
 # Varargs tests.
 
-gdb_test "macro define va_c99(...) fprintf (stderr, __VA_ARGS__)" \
+gdb_test "macro define va_c99(...) varfunc (fixedarg, __VA_ARGS__)" \
   "" \
   "define first varargs helper"
 
-gdb_test "macro define va2_c99(x, y, ...) fprintf (stderr, x, y, __VA_ARGS__)" \
+gdb_test "macro define va2_c99(x, y, ...) varfunc (fixedarg, x, y, __VA_ARGS__)" \
   "" \
   "define second varargs helper"
 
-gdb_test "macro define va_gnu(args...) fprintf (stderr, args)" \
+gdb_test "macro define va_gnu(args...) varfunc (fixedarg, args)" \
   "" \
   "define third varargs helper"
 
-gdb_test "macro define va2_gnu(args...) fprintf (stderr, ## args)" \
+gdb_test "macro define va2_gnu(args...) varfunc (fixedarg, ## args)" \
   "" \
   "define fourth varargs helper"
 
 gdb_test "macro expand va_c99(one, two, three)" \
-  "expands to: *fprintf \\(stderr, *one, two, three\\)" \
+  "expands to: *varfunc \\(fixedarg, *one, two, three\\)" \
   "c99 varargs expansion"
 
 gdb_test "macro expand va_c99()" \
-  "expands to: *fprintf \\(stderr, *\\)" \
+  "expands to: *varfunc \\(fixedarg, *\\)" \
   "c99 varargs expansion without an argument"
 
 gdb_test "macro expand va2_c99(one, two, three, four)" \
-  "expands to: *fprintf \\(stderr, *one, two, three, four\\)" \
+  "expands to: *varfunc \\(fixedarg, *one, two, three, four\\)" \
   "c99 varargs expansion, multiple formal arguments"
 
 gdb_test "macro expand va_gnu(one, two, three, four)" \
-  "expands to: *fprintf \\(stderr, *one, two, three, four\\)" \
+  "expands to: *varfunc \\(fixedarg, *one, two, three, four\\)" \
   "gnu varargs expansion"
 
 gdb_test "macro expand va_gnu()" \
-  "expands to: *fprintf \\(stderr, *\\)" \
+  "expands to: *varfunc \\(fixedarg, *\\)" \
   "gnu varargs expansion without an argument"
 
 gdb_test "macro expand va2_gnu()" \
-  "expands to: *fprintf \\(stderr\\)" \
+  "expands to: *varfunc \\(fixedarg\\)" \
   "gnu varargs expansion special splicing without an argument"
 
 # Stringification tests.
